--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -15,6 +15,7 @@
         <partial name="~/Views/Seller/DetailTablePartial/OtherInformation.cshtml" />
         <input type="hidden" name="ProductId" class="form-control" value="@Model.ProductId" readonly />
         <br />
+        
         @if(Model.Trade == "金錢")
         {
          
@@ -73,7 +74,9 @@
                 </div>
             </div>
         }
+        <button class="btn btn-primary my-2" id="shoppingcart" value="@Model.ProductId">增加至購物車</button>
     </form>
+
 </div>
 @section topCSS{
     <link href="~/css/seller/detailtablepartial.css" asp-append-version="true" rel="stylesheet" />
@@ -82,6 +85,7 @@
     <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
     <!-- Demo styles -->
     <link rel="stylesheet" href="~/css/Swiper/Swiper.css" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 }
 @section endJS{
     <!-- Swiper JS -->
@@ -89,4 +93,39 @@
     <!-- Initialize Swiper -->
     <script src="~/js/Swiper/Swiper.js"></script>
     <script src="~/js/seller/detailtablepartial.js" asp-append-version="true"></script>
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
+    <script>
+        function AddToShoppingcart(id) {
+            var url = `/Buyer/AddToShoppingcart?id=${id}`;
+            $.ajax({
+                type: "POST",
+                url: url,
+                data: id,
+                error: function (xhr, status, error) { },
+                success: function (data) {
+                    
+                    if (data == true) {
+                        Swal.fire(
+                            '加入購物車了',
+                            '',
+                            'success'
+                        )
+                    }
+                    else if (data == false) {
+                        Swal.fire(
+                            '已經在購物車囉',
+                            '',
+                            'error'
+                        )
+                    }
+                }
+            });
+            return false;
+        }
+        var shoppingcart = document.getElementById("shoppingcart");
+        shoppingcart.addEventListener("click", () => {
+            var id = document.getElementById("shoppingcart").value;
+            AddToShoppingcart(id);
+        })
+    </script>
 }
