--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -48,7 +48,7 @@
         {
 
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop" S>
                 交換
             </button>
 
@@ -73,7 +73,7 @@
                 </div>
             </div>
         }
-        <button type="button" class="btn btn-primary my-2" id="shoppingcart" value="@Model.ProductId">增加至購物車</button>
+        <button type="button" class="btn btn-secondary my-2" id="shoppingcart" value="@Model.ProductId">增加至購物車</button>
     </form>
 
 </div>
