--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -18,6 +18,10 @@
     {
         Layout = "_LayoutAdministratorHomePage";
     }
+    else if (controller == "AdminCharts")
+    {
+        Layout = "_LayoutAdministratorCharts";
+    }
     else
     {
         Layout = "_Layout";
