--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHome.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHome.cshtml
@@ -12,7 +12,7 @@
             <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="navtext">管理人員控管</a>
         </li>
         <li class="menu-item">
-            <a href="#" class="navtext">按鈕3</a>
+            <a asp-controller="AdminCharts" asp-action="AdminChartsView" class="navtext">書籍圖表占比</a>
         </li>
         <li class="menu-item">
             <a href="#" class="navtext">按鈕4</a>
@@ -41,7 +41,25 @@
                     string username = segmentation[0];
 
                     <h2>你好: @username 歡迎來到管理員控制中心</h2>
-                    <partial name="~/views/administratorhomepage/detailcard.cshtml"></partial>
+                }
+                @foreach (var Users in Model)
+                {
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                @{
+                                    string Name = User.Identity.Name;
+                                    string[] segmentation = Name.Split('@');
+                                    string username = segmentation[0];
+                                    string fullName = username;
+                                }
+                                <h5 class="card-title">@fullName</h5>
+                                <p class="card-text">@Users.Nickname</p>
+                                <p class="card-text">@Users.Email</p>
+                                <p class="card-text">@Users.PhoneNo</p>
+                            </div>
+                        </div>
+                    </div>
                 }
             </div>
         </div>
