--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -17,38 +17,28 @@
                             <h5 class="card-title">@item.Title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
-
                         <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-
                             <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;"><img src="../Images/Products/@item.ProductId/@item.Image1" class="m-auto w-100" alt="@item.Title" onerror="errorLoad(this)" /></a>
-
                         </div>
                         @if (item.Trade == "金錢")
                         {
                             <table class="container-fluid my-2">
-
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.Trade)</td><td>@item.Trade</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.UnitPrice)</td><td>@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</td></tr>
-
                             </table>
                         }
                         else if (item.Trade == "以物易物")
                         {
                             <table class="container-fluid my-2">
-
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.Trade)</td><td>@item.Trade</td></tr>
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.ContentText)</td><td>@item.ContentText</td></tr>
-
-
-
                             </table>
-
                         }
 
                     </div>
@@ -57,11 +47,8 @@
         }
     </div>
 </div>
-
+<partial name="_NowPageMyProductsPartial" />
 
 @section topCSS{
     <link href="~/css/seller/myproducts.css" rel="stylesheet" />
-}
-@section endJS{
-
 }
