--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
-   
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
     <script src="~/js/seller/errorimg.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
@@ -41,18 +40,17 @@
         </nav>
     </header>
     <button onclick="topFunction()" id="topBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
-    <div class="container">
-        <main role="main" class="pb-5" style="padding-top: 75px;">
-            @RenderBody()
-        </main>
-    </div>
+    <main role="main" class="pb-5" style="padding-top: 75px;">
+        @RenderBody()
+    </main>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted m-0">
         
         <div class="container-footer">
             <div class="container">
                 &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Index">隱私中心</a>
             </div>
+            <link href="~/css/buttons.css" rel="stylesheet" />
             @if (User.Identity.IsAuthenticated)
             {
                 @if (!User.IsInRole("Buyer") && !User.IsInRole("Seller"))
