error img js fix

--- a/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
@@ -35,5 +35,5 @@
 <partial name="~/Views/Home/SearchProductbyName.cshtml" />
 
 @section topCSS{
-    <link href="~/css/seller/myproducts.css" rel="stylesheet" />
+    <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
 }
