--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProductbyName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProductbyName.cshtml
@@ -59,8 +59,5 @@
    
     
 @section topCSS{
-    <link href="~/css/seller/myproducts.css" rel="stylesheet" />
-}
-@section endJS{
-    
+    <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
 }
