--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
     <script src="~/lib/chart.js/chart.min.js"></script>
     <script src="~/lib/Ch"></script>
+    <script src="~/js/seller/errorimg.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
     @RenderSection("topJS", required: false)
 </head>
