--- a/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoreMVC5_UsedBookProject.ViewModels.LoginViewModel
 
 @{
-    ViewData["Title"] = "登入";
+    ViewData["Title"] = "管理員登入";
 }
 
 <div class="login-bg">
