--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorCreate.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorCreate.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoreMVC5_UsedBookProject.Models.AdministratorUser
 
 @{
-    ViewData["Title"] = "AdministratorCreate";
+    ViewData["Title"] = "管理員建立";
 }
 
 <style>
@@ -61,5 +61,5 @@
 </div>
 
 <div>
-    <a asp-controller="AdministratorProfile" asp-action="AdministratorData">返回管理員資料列表</a>
+    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
 </div>
