--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDelete.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDelete.cshtml
@@ -45,6 +45,6 @@
     
     <form asp-action="AdministratorDelete">
         <input type="submit" value="刪除" class="btn btn-danger" /> |
-        <a asp-controller="AdministratorProfile" asp-action="AdministratorData">返回管理員資料列表</a>
+        <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
     </form>
 </div>
