--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoreMVC5_UsedBookProject.Models.AdministratorUser
 
 @{
-    ViewData["Title"] = "AdministratorEdit";
+    ViewData["Title"] = "管理員資料編輯";
 }
 
 <h1>管理員資料編輯</h1>
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-controller="AdministratorProfile" asp-action="AdministratorData">返回管理員資料列表</a>
+    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
 </div>
 
 @section Scripts {
