--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -18,9 +18,13 @@
     {
         Layout = "_LayoutAdministratorHomePage";
     }
-    else if (controller == "AdminCharts")
+    else if (controller == "AdminChartsController")
     {
         Layout = "_LayoutAdministratorCharts";
+    }
+    else if (controller == " GetCpuController")
+    {
+        Layout = "_LayoutGetCpu";
     }
     else
     {
