--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDetail.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDetail.cshtml
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="AdministratorEdit" asp-route-id="@Model.Id" class="btn btn-info">編輯</a>
-    <a asp-controller="AdministratorProfile" asp-action="AdministratorData">返回管理員資料列表</a>
+    <a asp-action="AdministratorEdit" asp-route-id="@Model.Id" class="btn btn-info">編輯</a>|
+    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
 </div>
