--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorSuspension.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorSuspension.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AdministratorUser
 @{
-    ViewData["Title"] = "管理員個人資料明細";
+    ViewData["Title"] = "管理員權限更改";
 }
 
 <h4 class="alert alert-danger">管理員個人資料明細</h4>
@@ -25,7 +25,8 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="AdministratorProfile" asp-action="DeactivateAdmin" asp-route-id="@Model.Id" class="btn btn-info">停用管理員權限</a>
-
-    <a asp-controller="AdministratorProfile" asp-action="OpenAdmin" asp-route-id="@Model.Id" class="btn btn-info">啟用管理員權限</a>
+    <a asp-controller="AdministratorProfile" asp-action="TopAdministrator" asp-route-id="@Model.Id" class="btn btn-danger">設為一級管理員</a>|
+    <a asp-controller="AdministratorProfile" asp-action="commonAdministrator" asp-route-id="@Model.Id" class="btn btn-primary">設為二級管理員</a>|
+    <a asp-controller="AdministratorProfile" asp-action="SuspendedAdministrator" asp-route-id="@Model.Id" class="btn btn-info">停用管理員權限</a>|
+    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
 </div>
