--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorProfile.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorProfile.cshtml
@@ -21,10 +21,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Index">主頁面</a>
+                            <a class="nav-link nav-item-custom text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Index">主頁面</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+                            <a class="nav-link nav-item-custom text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
                         </li>
                     </ul>
                 </div>
@@ -37,11 +37,11 @@
         </main>
     </div>
     <footer class="border-top footer text-muted">
-        <div class="container-footer">
-            <div class="container">
+        <div class="container-footer d-flex justify-content-between">
+            <div>
                 &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
             </div>
-            <div class="nav-item-btn buttonpartial">
+            <div>
                 <partial name="_AdminLoginStatusPartial" />
             </div>
         </div>
