--- a/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
@@ -93,6 +93,9 @@
         <li class="list-unstyled aside-link">
             <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Shoppingcart", "Buyer", new {})">購物車</a>
         </li>
+        <li class="list-unstyled aside-link">
+            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Wish", "Buyer", new {})">許願井</a>
+        </li>
     }
 </ul>
 
