--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -12,7 +12,7 @@
             <input type="text" id="isbn" name="isbn" required />
         </div>
 
-        <button type="submit">許願井</button>
+        <button type="submit" class="btn btn-outline-primary">增至許願井</button>
     </form>
 
 
