--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
@@ -27,7 +27,7 @@
                         使用者
                     </label>
                 </div>
-                <div class="form-check">
+                <div class="form-check mt-3">
                     <input class="form-check-input" type="radio" asp-for="Role" id="flexRadioTrade2" value="管理者">
                     <label class="form-check-label" for="flexRadioTrade2">
                         管理者
