login-user-select-none

--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    user-select: none;
 }
 #login:hover {
     background-color: #282B2E;
