account-nav-a css

--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -28,13 +28,13 @@
     else
     {
         <div class="d-flex align-items-center justify-content-center">
-            <a href="@Url.Action("SignOut", "Account")" class="p-1 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
+            <a href="@Url.Action("SignOut", "Account")" class="p-1 account-nav-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
         </div>
     }
 }
 else
 {
     <div class="d-flex align-items-center justify-content-center">
-        <a href="@Url.Action("Login", "Account")" class="p-1 account-a text-decoration-none">登入</a>
+        <a href="@Url.Action("Login", "Account")" class="p-1 account-nav-a text-decoration-none">登入</a>
     </div>
 }
