批量註冊大小限制

--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
@@ -11,7 +11,7 @@
         <div class="col-12">
             <form asp-action="RegisterFromCSV" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <p>@Html.DisplayNameFor(model => model.File)</p>
+                <p>@Html.DisplayNameFor(model => model.File) 限2MB以內</p>
                 <div class="d-flex align-items-end">
                     <label for="file1" class="btn btn-primary">
                         選擇檔案
