--- a/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductImage.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th colspan="2"><h2>商品圖片</h2><p>限(jpg|jpeg|png|gif)</p></th>
+            <th colspan="2"><h2>商品圖片</h2><p>限(jpg|jpeg|png|gif) 2MB以內</p></th>
         </tr>
     </thead>
     <tbody>
