已完成訂單與交易地點

--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/SaleInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/SaleInformation.cshtml
@@ -33,5 +33,9 @@
                 <td>NT$@price()</td>
             </tr>
         }
+        <tr>
+            <td>@Html.DisplayNameFor(model => model.TradingPlaceAndTime)</td>
+            <td>@Html.DisplayFor(model => model.TradingPlaceAndTime)</td>
+        </tr>
     </tbody>
 </table>
