--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -27,6 +27,10 @@
             <span style="color: red;">@Model.OrdersCount["不成立"] </span>
         </li>
         <li class="nav-item d-flex">
+            <a href="@Url.Action("MySales", "Buyer", new {status = "已完成", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "已完成" ? "color: red; border-bottom: 2px solid red;" : "")">已完成</a>
+            <span style="color: red;">@Model.OrdersCount["已完成"] </span>
+        </li>
+        <li class="nav-item d-flex">
             <a href="@Url.Action("MySales", "Buyer", new {status = "待取消", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "待取消" ? "color: red; border-bottom: 2px solid red;" : "")">待取消</a>
             <span style="color: red;">@Model.OrdersCount["待取消"] </span>
         </li>
@@ -53,6 +57,10 @@
                 </table>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                     <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
+                    @if (item.Status == "已成立")
+                    {
+                        <a href="@Url.Action("FinishOrder", "Buyer", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2">完成訂單</a>
+                    }
                 </div>
             </div>
         }
