--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -56,10 +56,10 @@
                     <tr><td>@Html.DisplayNameFor(model => model.Order.Status)</td><td>@item.Status</td></tr>
                 </table>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
+                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
                     @if (item.Status == "已成立")
                     {
-                        <a href="@Url.Action("FinishOrder", "Buyer", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2">完成訂單</a>
+                        <a href="@Url.Action("FinishOrder", "Buyer", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 完成訂單</a>
                     }
                 </div>
             </div>
