home productslist no products show

--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -45,6 +45,10 @@
                 </div>
             }
         }
+        else
+        {
+            <h2 class="text-center my-5 w-100">沒有上架的商品</h2>
+        }
     </div>
 </div>
 <partial name="_NowPageMyProductsPartial" />
